--- a/Website/universal-style.css
+++ b/Website/universal-style.css
@@ -19,6 +19,11 @@ body {
     font-size: 1rem;
 }
 
+button, input {
+    font-family: 'Cambria', 'Georgia', 'Times New Roman', serif;
+    font-size: 1rem;
+}
+
 #wrapper {
     display: flex;
     flex-direction: column;
@@ -100,6 +105,7 @@ footer {
     padding: 10px;
     color: lightblue;
     background-color: darkblue;
+    border: 1px solid white;
 }
 
 footer p {
@@ -109,6 +115,29 @@ footer p {
 
 /* Headings */
 
-h2 {
+h2, h3 {
     color: darkblue;
+}
+
+/* Buttons */
+
+button {
+    min-width: 100px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid lightblue;
+    background-color: darkblue;
+    color: white;
+    cursor: pointer;
+}
+
+button:active {
+    background-color: lightblue;
+}
+
+/* Text with smaller italic font */
+
+.fine-print {
+    font-size: 0.75rem;
+    font-style: italic;
 }
